@@ -79,6 +79,7 @@ protected:
     string localName;
     string configFile;
     bool Robotable;
+    bool headV2;
     bool genOn;
     bool VOR;
     int nJointsTorso;
@@ -100,7 +101,8 @@ public:
                   exchangeData *_commData, const string &_robotName,
                   const string &_localName, const string &_configFile,
                   const double _eyeTiltMin, const double _eyeTiltMax,
-                  const bool _VOR, unsigned int _period);
+                  const bool _VOR, const bool _headV2,
+                  const unsigned int _period);
 
     void set_xdport(xdPort *_port_xd) { port_xd=_port_xd; }
     void enable()                     { genOn=true;       }
@@ -142,6 +144,7 @@ protected:
     string configFile;
     unsigned int period;
     bool Robotable;
+    bool headV2;
     bool bindSolveRequest;
     int nJointsTorso;
     int nJointsHead;
@@ -171,7 +174,7 @@ public:
     Solver(PolyDriver *_drvTorso, PolyDriver *_drvHead, exchangeData *_commData,
            EyePinvRefGen *_eyesRefGen, Localizer *_loc, Controller *_ctrl,
            const string &_localName, const string &_configFile, const double _eyeTiltMin,
-           const double _eyeTiltMax, unsigned int _period);
+           const double _eyeTiltMax, const bool _headV2, const unsigned int _period);
 
     // Returns a measure of neck angle required to reach the target
     Vector neckTargetRotAngles(const Vector &xd);    
