@@ -1,4 +1,7 @@
 
+2011-03-04 Ugo Pattacini <ugo.pattacini@iit.it>
+	   * Structure prepared for dealing with head v2
+
 2011-03-03 Ugo Pattacini <ugo.pattacini@iit.it>
 	   * DH parameters update
 
